--- a/h5/index.html
+++ b/h5/index.html
@@ -1,2 +1,14 @@
 <html>
+<script src="jwplayer.js"></script>
+<script>jwplayer.key="YA9lbE9Kg6Aw5YNig7qRzhlb/mu0hkVm2z9zPQ==";</script>
+<div id='myElement'></div>
+<script type='text/javascript'>
+    var playerInstance = jwplayer("myElement");
+    playerInstance.setup({
+    file: "rtmp://stargroup.cc/live/mystream",
+    height: 360,
+    width: 640
+});
+</script>
 </html>
+
