--- a/h5/index.html
+++ b/h5/index.html
@@ -1,4 +1,6 @@
 <html>
+<head><title>live streaming</title></head>
+<body>
 <script src="jwplayer.js"></script>
 <script>jwplayer.key="YA9lbE9Kg6Aw5YNig7qRzhlb/mu0hkVm2z9zPQ==";</script>
 <div id='myElement'></div>
@@ -10,5 +12,6 @@
     width: 640
 });
 </script>
+</body>
 </html>
 
