配置静态服务器

--- a/h5/index.html
+++ b/h5/index.html
@@ -1,17 +1,13 @@
-<html>
-<head><title>live streaming</title></head>
-<body>
-<script src="jwplayer.js"></script>
-<script>jwplayer.key="YA9lbE9Kg6Aw5YNig7qRzhlb/mu0hkVm2z9zPQ==";</script>
-<div id='myElement'></div>
-<script type='text/javascript'>
-    var playerInstance = jwplayer("myElement");
-    playerInstance.setup({
-    file: "rtmp://stargroup.cc/live/mystream",
-    height: 360,
-    width: 640
-});
-</script>
-</body>
-</html>
+<!DOCTYPE HTML>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>DroneXP</title>
+  </head>
 
+  <body>
+    <video autoplay></video>
+    <script scr="main.js"></script>
+
+  </body>
+</html>
