--- a/h5/index.html
+++ b/h5/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <video autoplay></video>
-    <script scr="main.js"></script>
+    <script src="main.js"></script>
 
   </body>
 </html>
