--- a/h5/index.html
+++ b/h5/index.html
@@ -55,9 +55,9 @@
       <button id="hang-up">Hang Up</button>
     </div>
 
-    <script src="adapter.js"></script>
-    <script src="common.js"></script>
-    <script src="client.js"></script>
+    <script src="js/adapter.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/client.js"></script>
 
   </body>
 </html>
