--- a/h5/index.html
+++ b/h5/index.html
@@ -53,6 +53,10 @@
       <input type="text" id="their-username" />
       <button id="call">Call</button>
       <button id="hang-up">Hang Up</button>
+
+      <input type="text" id="message"></input>
+      <button id="send">Send</button>
+      <div id="received"></div>
     </div>
 
     <script src="js/adapter.js"></script>
