--- a/h5/index.html
+++ b/h5/index.html
@@ -37,6 +37,17 @@
       width: 500px;
       height: 500px;
     }
+
+    #received {
+      display: block;
+      width: 480px;
+      height: 100px;
+      background: white;
+      padding: 10px;
+      margin-top: 10px;
+      color: black;
+      overflow: scroll;
+    }
     </style>
   </head>
 
