--- a/h5/index.html
+++ b/h5/index.html
@@ -59,8 +59,8 @@
       <div id="received"></div>
     </div>
 
-    <script src="js/adapter.js"></script>
-    <script src="js/common.js"></script>
+    <!--<script src="js/adapter.js"></script>
+    <script src="js/common.js"></script>-->
     <script src="js/client.js"></script>
 
   </body>
